lab1/Test/L1-A-13-80.output
Error Type A at Line 5
Error Type B at Line 12
Error Type B at Line 13
Error Type B at Line 14
Error Type A at Line 19
Error Type A at Line 32
Error Type A at Line 38
