lab1/Test/L1-A-13-80.cmm
struct yfvwYx {
  float kJSrMcTbrJtG [ 216913407 ] , DPY7FpS = BWk8Q1WDPRFf0 
    = lFmTf8IEos || C && THJHdODZ <= rsPAO7dS + D * ! 
    ziEHeyOGMIHockKWn ( LPFOyWeF06DYfD_0SGcr , AlysVsrVJRHBFjq2 
    &>= I - - gro7gV [ nPu || h == M1O5CpyXgVf9Z4u7 ( 
    dxjMLnwlRCtLYTnVu , pi && VQU4qxtw_TUQ - - - ! - NP7ETIThOrj7 
    ( PrZOgUS , nIn != ZfMo2CYsj7u2NB [ RkzqD_2tkij < 
    KYrwvhr9Z0 ( AfEhm4WDto9sIM2JdiQ , qPbgaALJ > sl0eA6hxCvQ 
    / ( YJ20SW ) ) . s_F6zu_g1xXrP3ukTfcW + WQssVo1 + 
    1198802006.1219971204 ] ) ) / 817834053 . zHgVQzw 
    ] / - ! ! ZCFbRa7snU ( ) ) ;
};!= 
;
int + xQx_uCkSEiWtqbxV0 ( int H0ij9hXKLI__ , int w1Iis 
  ) {
  struct {
    int l3ODSJhlHgNP ;
  }dB ;
  struct q4wyNLjKV3sz5tBQ4fPx kKUMtsB0CWtnY ~;
  int B1KkvDVck7ud1U4 ;
}
int fb , RZfNACLYyCHjH 

;
int ;
int ;
int Mxsf ( ) {
  ZYv ;
  X_Lk ;
  if ( ZSR86SCJu )   i ;
else {
    if &( ONUZPy1 )     while ( XD7M94Z )     fR4Bp6oj3WFi 
      ;

else     if ( OxC4f9T_vmMt )     return jnCdWQI ;


&  }
}
int ;
